--- a/styles.css
+++ b/styles.css
@@ -106,3 +106,10 @@ a{
 	margin-top: 0;
 	color:#0ae7f2; 
 }
+
+.description{
+	font-size:30px;
+	font-family: 'Concert One', cursive;
+	text-align: left;
+	margin:2% 10% 2% 10%;
+}
